# OOPforCanteen

./: CMakeLists.txt  Dish.cpp  Dish.h  List.cpp  List.h  main.cpp  workerDish.cpp  workerDish.h
